mythtv (0.22.0~trunk22359-0ubuntu2) UNRELEASED; urgency=low

  [ Gary Butters ]
  * debian/control:
    - Depends on wmctrl
  * Add support to use wmctrl to bring mythfrontend to the foreground
    if already running. (LP: #352077)

  [ Mario Limonciello ]
  * Add a bug_pattern_base to the mythbuntu crashdb.
  * Fix mythbuntu crashdb to refer to project not product.

 -- Mario Limonciello <superm1@ubuntu.com>  Sun, 11 Oct 2009 20:20:48 -0500

mythtv (0.22.0~trunk22359-0ubuntu1) karmic; urgency=low

  [ Mario Limonciello ]
  * New upstream checkout (r22359)
    - Themes have been shuffled around a bunch.
    - Fixes transcode arguments (LP: #429089)
  * debian/control:
    - Conflicts and replaces for themes that are now part of this package
  * debian/mythtv-setup.desktop:
    - Set to a real icon.
  * Set up some symlinks for the dejavu fonts so they aren't installed several
    times.
  * debian/rules:
    - Remove references to firewire_tester.  We're not building it.
  * Simplify upstart script a bit.
  * Drop old logic for checking that ~mythtv/.mythtv/mysql.txt exists, and move
    it into the postinst.
  * Ship a mythbuntu crashdb for apport to catch crashes and submit against the
    mythbuntu project.
  * Add an apport hook for mythtv packages.
    - PPA builds will be directed at launchpad.net/mythbuntu
    - Normal builds will end up against launchpad.net/ubuntu/+source/mythtv

  [ Dave Walker ]
    * Incremeted to new upstream version to current trunk head.
    * Replaced sysv style init script with Upstart.
      - debian/control: Bump build-dependency on debhelper for Upstart-aware
        dh_installinit (debhelper >=7). 
      - debian/mythtv-backend.upstart added.
    * Standards-Version bumped to 3.8.2.

 -- Mario Limonciello <superm1@ubuntu.com>  Sun, 11 Oct 2009 13:43:15 -0500

mythtv (0.22.0~trunk22304-0ubuntu1) karmic; urgency=low

  * New upstream checkout (r22304)
    - Fixes crash during image loading of mythfrontend (LP: #445173)